# bangumi

./: Cargo.toml  README.md
src/: endpoints.rs  lib.rs
