[package]
name        = "bangumi"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["George Miao <gm@miao,dev>"]
repository  = "https://github.com/George-Miao/bangumi"
keywords    = ["bangumi", "api", "client"]
categories  = ["network-programming"]
description = "A bangumi.moe API client written in Rust"

[dependencies]
serde     = { version = "1.0", features = ["derive"] }
microtype = { version = "0.7.5", features = ["serde"] }

paste            = "1.0.9"
thiserror        = "1.0.37"
typed-builder    = "0.11.0"
rustified        = "0.5.3"
rustified_derive = "0.5.3"

[dev-dependencies]
tap   = "1.0.1"
tokio = { version = "1.21.2", features = ["test-util", "macros"] }
